# discite-c

./: CMakeLists.txt  README.md  arrays.c  hash.c  pointers.c  strings.c  structs.c  variables.c
sqlite-like/: CMakeLists.txt  README.md  main.c
